ref: format_bytes is deprecated

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/media_library/template.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/media_library/template.html.twig
@@ -26,7 +26,7 @@
         <li>
             <div><a href="{{ url }}" download="{{ media.file.filename }}" data-ems-id="{{ media.emsId }}">{{ media.file.filename }}</a></div>
             <div>{{ media.file.mimetype|trans({}, 'emsco-mimetypes') }}</div>
-            <div class="text-right">{{ media.file.filesize|format_bytes }}</div>
+            <div class="text-right">{{ media.file.filesize|ems_format_bytes }}</div>
         </li>
     {% endapply %}
 {%- endblock mediaLibraryFileRow -%}
