--- a/demo/skeleton/template/page/blocks/news.html.twig
+++ b/demo/skeleton/template/page/blocks/news.html.twig
@@ -26,7 +26,7 @@
             {("title_#{locale}.alpha_order"): {"order": "asc"}}
         ],
         "_source": ["#{app.request.locale}.title"]
-    }).hits.hits|default([])|array_key('_id')|map(p => attribute(p._source, app.request.locale).title) %}
+    }).hits.hits|default([])|ems_array_key('_id')|map(p => attribute(p._source, app.request.locale).title) %}
 
     <div class="container-fluid container-lg">
         <div class="py-5 py-lg-8">
