--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/sidenav.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/sidenav.html.twig
@@ -12,7 +12,7 @@
             {{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::sideMenu')) }}
         {% else %}
             {% include '@EMSAdminUI/bootstrap5/elements/side-menu.html.twig' with {
-                'contentTypes': get_content_types()
+                'contentTypes': emsco_get_content_types()
             } %}
         {% endif %}
     </div>
