--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -21,8 +21,8 @@
 
 {%- set type_filters = [] -%}
 {%- set all_types = false %}
-{%- if get_content_types()|length > 0 -%}
-    {%- for contentType in get_content_types()|filter(contentType => contentType.webContent) -%}
+{%- if emsco_get_content_types()|length > 0 -%}
+    {%- for contentType in emsco_get_content_types()|filter(contentType => contentType.webContent) -%}
         {%- if all_types  -%}
             {% set all_types = all_types~','~contentType.name -%}
         {%- else %}
@@ -139,7 +139,7 @@
 		  	{{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::sideMenu')) }}
 		{% else %}
             {% include '@EMSAdminUI/bootstrap5/elements/side-menu.html.twig' with {
-				'contentTypes': get_content_types()
+				'contentTypes': emsco_get_content_types()
 			} %}
         {% endif %}
   <!-- Content Wrapper. Contains page content -->
