--- a/EMS/core-bundle/src/Resources/views/base-light.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base-light.html.twig
@@ -39,8 +39,8 @@
 
 {%- set type_filters = [] -%}
 {%- set all_types = false %}
-{%- if get_content_types()|length > 0 -%}
-    {%- for contentType in get_content_types()|filter(contentType => contentType.webContent) -%}
+{%- if emsco_get_content_types()|length > 0 -%}
+    {%- for contentType in emsco_get_content_types()|filter(contentType => contentType.webContent) -%}
         {%- if all_types  -%}
             {% set all_types = all_types~','~contentType.name -%}
         {%- else %}
