--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_item.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_item.html.twig
@@ -1,19 +1,19 @@
 
 {% if attribute(parent, view.options.field) is defined %}
     {% for child in attribute(parent, view.options.field) %}
-    	{% set data = child|data %}
+    	{% set data = child|emsco_get %}
     	{% if data %}
     		{% set key = child|split(':') %}
     	    {% set contentType = key[0]|get_content_type %}
 
             {% include "@EMSCore/view/custom/hierarchical_add_item.html.twig" with {
-        		parent: data,
+        		parent: data.source,
             	view: view,
             	key: key,
             	contentType: contentType,
             	child: child
-        	} %}  
+        	} %}
         {% endif %}
-    
+
     {% endfor %}
 {% endif %}
