--- a/EMS/core-bundle/src/Resources/views/user/profile/show.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/profile/show.html.twig
@@ -42,7 +42,7 @@
                                 <b>{{ circles_object|get_content_type.pluralName }} : </b>
                                 <i class="">
                                     {% for circle in user.circles  -%}
-                                        <span class="badge text-nowrap">{{- circle|data_label|raw -}}</span>&nbsp;
+                                        <span class="badge text-nowrap">{{- circle|emsco_display|raw -}}</span>&nbsp;
                                     {%- endfor %}
                                 </i>
                             </li>
