--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
@@ -547,7 +547,7 @@
 			<dt>{{ dataField.fieldType.name }}</dt>
 		{% endif %}
 		<dd>
-            {{ diff_data_link(dataField.rawData, compare, dataField.fieldType.name, compareRawData) }}
+            {{ emsco_diff_data_link(dataField.rawData, compare, dataField.fieldType.name, compareRawData) }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -564,7 +564,7 @@
             {% set labels = dataField.fieldType.displayOptions.labels|replace({"\r":''})|split('\n') %}
             {% set choices = dataField.fieldType.displayOptions.choices|replace({"\r":''})|split('\n') %}
 			<ul>
-            	{{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
+            	{{ emsco_diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 			</ul>
 
 		</dd>
@@ -579,7 +579,7 @@
 		{% else %}
 			<dt>{{ dataField.fieldType.name }}</dt>
 		{% endif %}
-		<dd>{{ diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}</dd>
+		<dd>{{ emsco_diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
 {% endblock %}
@@ -627,7 +627,7 @@
 		{% else %}
 			<dt>{{ dataField.fieldType.name }}</dt>
 		{% endif %}
-		<dd>{{ diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}</dd>
+		<dd>{{ emsco_diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
 {% endblock %}
@@ -644,7 +644,7 @@
 		<dd>
 			<div class="panel panel-default">
 				<div class="panel-body">
-                    {{ diff(dataField.rawData, attribute(compareRawData, dataField.fieldType.name)|default(null), compare, true, false)|nl2br }}
+                    {{ emsco_diff(dataField.rawData, attribute(compareRawData, dataField.fieldType.name)|default(null), compare, true, false)|nl2br }}
 				</div>
 			</div>
 		</dd>
@@ -698,7 +698,7 @@
 		</dt>
 		<dd>
 			<div class="panel panel-default">
-				{% set panelBody = diff_html(dataField.rawData, compare, dataField.fieldType.name, compareRawData) %}
+				{% set panelBody = emsco_diff_html(dataField.rawData, compare, dataField.fieldType.name, compareRawData) %}
 				{% if dataField.rawData and dataField.fieldType.displayOptions.styles_set_preview|default(false) %}
 					{% set displayOptions = dataField.fieldType.displayOptions %}
 					{% set iframeUrl = path('emsco_wysiwyg_styleset_iframe', {
@@ -886,7 +886,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -902,7 +902,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_icon(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_icon(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -918,7 +918,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_color(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_color(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -940,7 +940,7 @@
             {% set labels = dataField.fieldType.displayOptions.labels|replace({"\r":''})|split('\n') %}
             {% set choices = dataField.fieldType.displayOptions.choices|replace({"\r":''})|split('\n') %}
 
-            {{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
+            {{ emsco_diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -976,7 +976,7 @@
 
 
 
-				{{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
+				{{ emsco_diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 			</ul>
 		</dd>
 	</dl>
@@ -1015,7 +1015,7 @@
 					{% endfor %}
 				{% endif %}
 
-				{{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
+				{{ emsco_diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 			</ul>
 		</dd>
 	</dl>
@@ -1045,7 +1045,7 @@
 					{% set choices = menu.toArray()|map(i => i.id) %}
 					{% set labels = menu.toArray()|map(i => i.path|map(i => i.label)|join(' > ')) %}
 				{%- endfor -%}
-				{{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
+				{{ emsco_diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 			</ul>
 		</dd>
 	</dl>
@@ -1064,7 +1064,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_boolean(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_boolean(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 			{% if dataField.fieldType.displayOptions.question_label is defined and dataField.fieldType.displayOptions.question_label %}
 				{{ dataField.fieldType.displayOptions.question_label }}
 			{% endif %}
@@ -1083,7 +1083,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_raw(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_raw(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -1099,7 +1099,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_raw(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+            {{ emsco_diff_raw(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -1116,7 +1116,7 @@
 		</dt>
 		<dd>
 			<ul>
-				{{ diff_date(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.displayOptions.displayFormat|convertJavascriptDateFormat, false, dataField.fieldType.mappingOptions.format|default('yyyy/MM/dd')|convertJavaDateFormat) }}
+				{{ emsco_diff_date(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.displayOptions.displayFormat|convertJavascriptDateFormat, false, dataField.fieldType.mappingOptions.format|default('yyyy/MM/dd')|convertJavaDateFormat) }}
 			</ul>
 		</dd>
 	</dl>
@@ -1134,7 +1134,7 @@
 		</dt>
 		<dd>
 			<ul>
-				{{ diff_date(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.displayOption('parseFormat', 'd/m/Y H:i:s')) }}
+				{{ emsco_diff_date(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.displayOption('parseFormat', 'd/m/Y H:i:s')) }}
 			</ul>
 		</dd>
 	</dl>
@@ -1176,13 +1176,13 @@
                 {% if dateFrom %}
 					<li>
 						<b>From </b>
-                        {{ diff_date(dateFrom, compare, dataField.fieldType.mappingOptions.fromDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
+                        {{ emsco_diff_date(dateFrom, compare, dataField.fieldType.mappingOptions.fromDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
 					</li>
 				{% endif %}
 				{% if dateTo %}
 					<li>
 						<b>To </b>
-                        {{ diff_date(dateTo, compare, dataField.fieldType.mappingOptions.toDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
+                        {{ emsco_diff_date(dateTo, compare, dataField.fieldType.mappingOptions.toDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
 					</li>
 				{% endif %}
 				{% if dateFrom and dateTo %}
@@ -1190,7 +1190,7 @@
 						<b>Duration </b>
 						{% if compare %}
 							{% if attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName) is defined and attribute(child, dataField.fieldType.mappingOptions.toDateMachineName) is defined %}
-                                {{ diff(dateFrom|date_difference(dateTo, dataField.fieldType.displayOptions.timePicker), attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName)|date_difference(attribute(child, dataField.fieldType.mappingOptions.toDateMachineName), dataField.fieldType.displayOptions.timePicker), compare, true) }}
+                                {{ emsco_diff(dateFrom|date_difference(dateTo, dataField.fieldType.displayOptions.timePicker), attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName)|date_difference(attribute(child, dataField.fieldType.mappingOptions.toDateMachineName), dataField.fieldType.displayOptions.timePicker), compare, true) }}
 							{% else %}
 								<span class="text-green"><ins class="diffmod">{{ dateFrom|date_difference(dateTo, dataField.fieldType.displayOptions.timePicker) }}</ins></span>
 							{% endif %}
@@ -1218,10 +1218,10 @@
 			{% if dataField.fieldType.displayOptions.multiple|default(false) %}
 				{% set choices = dataField.fieldType.rawData|default([]) %}
 				<ul>
-					{{ diff_choice(dataField.rawData, choices, choices, compare, dataField.fieldType.name, compareRawData) }}
+					{{ emsco_diff_choice(dataField.rawData, choices, choices, compare, dataField.fieldType.name, compareRawData) }}
 				</ul>
 			{% else %}
-				{{ diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData) }}
+				{{ emsco_diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData) }}
 			{% endif %}
 		</dd>
 	</dl>
@@ -1238,7 +1238,7 @@
 			{% endif %}
 		</dt>
 		<dd>
-            {{ diff_time(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.options|getTimeFieldTimeFormat, dataField.fieldType.mappingOptions.format|convertJavaDateFormat) }}
+            {{ emsco_diff_time(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.options|getTimeFieldTimeFormat, dataField.fieldType.mappingOptions.format|convertJavaDateFormat) }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -1259,7 +1259,7 @@
 			{% else %}
 				{% set translateRaw = 'revision.version_tag.empty'|trans %}
 			{% endif %}
-			{{ diff_text(translateRaw, false, dataField.fieldType.name, compareRawData)|raw }}
+			{{ emsco_diff_text(translateRaw, false, dataField.fieldType.name, compareRawData)|raw }}
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
